--- a/package.json
+++ b/package.json
@@ -11,8 +11,18 @@
   "author": "B",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "crypto": "^1.0.1",
+    "dotenv": "^9.0.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.2",
+    "express-rate-limit": "^5.2.6",
+    "helmet": "^4.6.0",
+    "mongoose": "^5.12.7",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
-    "socket.io": "^4.0.1"
+    "socket.io": "^4.0.1",
+    "validator": "^13.6.0",
+    "xss-clean": "^0.1.1"
   }
 }
