add login functions

--- a/config.env
+++ b/config.env
@@ -2,3 +2,6 @@ ENVIRONMENT=dev
 PORT=3000
 DB=mongodb+srv://brian:<password>@cluster0.z8keo.mongodb.net/chatApp?retryWrites=true&w=majority
 DB_PASSWORD=qwe123
+JWT_SIGNATURE=SOME_VERY_LONG_SECRET_FOR_TOKEN
+JWT_EXPIRE=60d
+JWT_EXPIRE_COOKIE=60
