--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-rate-limit": "^5.2.6",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
