--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "B",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "crypto": "^1.0.1",
