--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.12.7",
     "mongoose-sequence": "^5.3.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.7",
     "socket.io": "^4.0.1",
     "validator": "^13.6.0",
