update reset password function

--- a/config.env
+++ b/config.env
@@ -5,3 +5,7 @@ DB_PASSWORD=qwe123
 JWT_SIGNATURE=SOME_VERY_LONG_SECRET_FOR_TOKEN
 JWT_EXPIRE=60d
 JWT_EXPIRE_COOKIE=60
+EMAIL_AC=hlwbriantesting@gmail.com
+EMAIL_PWD=ETHK#2525
+DOMAIN=http://localhost:3000/
+RESETTIMELIMIT=60
